# my-arbolitos

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  run.sh
src/: cli.rs  db.rs  main.rs  models.rs
